# ghostbox

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
rules/: example.yar
src/ghostbox/: __init__.py  cli.py  engine.py  output.py  report.py  scoring.py  utils.py
src/ghostbox/analyzers/: __init__.py  capabilities.py  elf.py  entropy.py  filetype.py  hashing.py  pe.py  strings_ioc.py  yara_scan.py
tests/: conftest.py  fixtures.py  test_capabilities.py  test_cli.py  test_elf.py  test_engine.py  test_entropy.py  test_filetype.py  test_hashing.py  test_pe.py  test_scoring.py  test_strings_ioc.py  test_yara.py
