[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostbox"
version = "0.1.0"
description = "Static malware analysis sandbox for authorized triage (static analysis only, never executes samples)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "joemunene-by" }]
keywords = ["malware", "static-analysis", "forensics", "triage", "yara", "ioc", "dfir"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
pe = ["pefile>=2023.2.7"]
elf = ["pyelftools>=0.30"]
yara = ["yara-python>=4.3"]
full = ["pefile>=2023.2.7", "pyelftools>=0.30", "yara-python>=4.3"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/joemunene-by/ghostbox"
Repository = "https://github.com/joemunene-by/ghostbox"

[project.scripts]
ghostbox = "ghostbox.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
